# kicadgen

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kicadgen/: README.md  __init__.py  cli.py  extractor.py  pdf_processor.py  pipeline.py  schema.py  validator.py  vlm_client.py
src/kicadgen/generators/: README.md  __init__.py  footprint.py  symbol.py
src/kicadgen/utils/: README.md  logging.py  tempfiles.py
tests/: README.md  __init__.py  test_extractor.py  test_footprint.py  test_symbol.py  test_validator.py
tests/fixtures/: sample_extracted.json
