[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicadgen"
version = "0.1.0"
description = "CLI tool for generating KiCAD footprint and symbol files from component datasheets using AI extraction"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pydantic>=2.0",
    "openai>=1.30",
    "anthropic>=0.28",
    "google-generativeai>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
kicadgen = "kicadgen.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
